unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/Customer_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Customer Invoice Line Item</label>
    <nameField>
        <displayFormat>CILI-{000000}</displayFormat>
        <label>Customer Invoice Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>