unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>Customer_Invoice__r.Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>