unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <formula>Customer_Invoice__r.Billing_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>