unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/Billing_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postcode__c</fullName>
    <formula>Customer_Invoice__r.Billing_Postcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Postcode</label>
    <type>Text</type>
</CustomField>