unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <formula>Customer_Invoice__r.Billing_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Street</label>
    <type>Text</type>
</CustomField>