unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/Billing_Town__c.field-meta.xml
<CustomField>
    <fullName>Billing_Town__c</fullName>
    <formula>Customer_Invoice__r.Billing_Town__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Town</label>
    <type>Text</type>
</CustomField>