unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/Charge_Category__c.field-meta.xml
<CustomField>
    <fullName>Charge_Category__c</fullName>
    <label>Charge Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labour</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Fixed Price Admin Fee</fullName>
            </value>
            <value>
                <fullName>List Price Service</fullName>
            </value>
            <value>
                <fullName>ULEZ</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Call Out Fee</fullName>
            </value>
            <value>
                <fullName>Cancellation Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>