unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/Charge_Net__c.field-meta.xml
<CustomField>
    <fullName>Charge_Net__c</fullName>
    <label>Charge Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>