unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/Charge_VAT__c.field-meta.xml
<CustomField>
    <fullName>Charge_VAT__c</fullName>
    <formula>Charge_Net__c * ( (VALUE(TEXT(VAT_Rate__c))/100) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>