unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/Customer_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice__c</fullName>
    <label>Customer Invoice</label>
    <referenceTo>Customer_Invoice__c</referenceTo>
    <relationshipLabel>Customer Invoice Line Items</relationshipLabel>
    <relationshipName>Customer_Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>