unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/General_Ledger_Code__c.field-meta.xml
<CustomField>
    <fullName>General_Ledger_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Ledger Code</label>
    <referenceTo>General_Ledger_Code__c</referenceTo>
    <relationshipLabel>Customer Invoice Line Items</relationshipLabel>
    <relationshipName>Customer_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>