unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <formula>Customer_Invoice__r.Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>