unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Customer Invoice Line Items</relationshipLabel>
    <relationshipName>Customer_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>