unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate__c</fullName>
    <label>VAT Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>17.5</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>