unpackaged/main/default/objects/Customer_Invoice_Line_Item__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Customer Invoice Line Items</relationshipLabel>
    <relationshipName>Customer_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>